// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enforceLonghands enhancer should accept a borderMode=directional configuration 1`] = `
{
  "MozAnimationDelay": 2,
  "MozAnimationDirection": 2,
  "MozAnimationDuration": 2,
  "MozAnimationFillMode": 2,
  "MozAnimationIterationCount": 2,
  "MozAnimationName": 2,
  "MozAnimationPlayState": 2,
  "MozAnimationTimingFunction": 2,
  "MozBackgroundClip": 2,
  "MozBackgroundColor": 2,
  "MozBackgroundImage": 2,
  "MozBackgroundOrigin": 2,
  "MozBackgroundPosition": 2,
  "MozBackgroundRepeat": 2,
  "MozBackgroundSize": 2,
  "MozBorderBottom": 3,
  "MozBorderBottomColor": 4,
  "MozBorderBottomLeftRadius": 2,
  "MozBorderBottomRightRadius": 2,
  "MozBorderBottomStyle": 4,
  "MozBorderBottomWidth": 4,
  "MozBorderColor": 2,
  "MozBorderImageOutset": 2,
  "MozBorderImageRepeat": 2,
  "MozBorderImageSlice": 2,
  "MozBorderImageSource": 2,
  "MozBorderImageWidth": 2,
  "MozBorderLeft": 3,
  "MozBorderLeftColor": 4,
  "MozBorderLeftStyle": 4,
  "MozBorderLeftWidth": 4,
  "MozBorderRight": 3,
  "MozBorderRightColor": 4,
  "MozBorderRightStyle": 4,
  "MozBorderRightWidth": 4,
  "MozBorderStyle": 2,
  "MozBorderTop": 3,
  "MozBorderTopColor": 4,
  "MozBorderTopLeftRadius": 2,
  "MozBorderTopRightRadius": 2,
  "MozBorderTopStyle": 4,
  "MozBorderTopWidth": 4,
  "MozBorderWidth": 2,
  "MozColumnCount": 2,
  "MozColumnWidth": 2,
  "MozFlexBasis": 2,
  "MozFlexShrink": 2,
  "MozFlexWrap": 2,
  "MozListStyleImage": 2,
  "MozListStylePosition": 2,
  "MozListStyleType": 2,
  "MozMarginBottom": 2,
  "MozMarginLeft": 2,
  "MozMarginRight": 2,
  "MozMarginTop": 2,
  "MozOutlineColor": 2,
  "MozOutlineStyle": 2,
  "MozOutlineWidth": 2,
  "MozOverflowX": 2,
  "MozOverflowY": 2,
  "MozPaddingBottom": 2,
  "MozPaddingLeft": 2,
  "MozPaddingRight": 2,
  "MozPaddingTop": 2,
  "MozTextDecorationColor": 2,
  "MozTextDecorationLine": 2,
  "MozTextDecorationStyle": 2,
  "MozTransitionDelay": 2,
  "MozTransitionDuration": 2,
  "MozTransitionProperty": 2,
  "MozTransitionTimingFunction": 2,
  "MsAnimationDelay": 2,
  "MsAnimationDirection": 2,
  "MsAnimationDuration": 2,
  "MsAnimationFillMode": 2,
  "MsAnimationIterationCount": 2,
  "MsAnimationName": 2,
  "MsAnimationPlayState": 2,
  "MsAnimationTimingFunction": 2,
  "MsBackgroundClip": 2,
  "MsBackgroundColor": 2,
  "MsBackgroundImage": 2,
  "MsBackgroundOrigin": 2,
  "MsBackgroundPosition": 2,
  "MsBackgroundRepeat": 2,
  "MsBackgroundSize": 2,
  "MsBorderBottom": 3,
  "MsBorderBottomColor": 4,
  "MsBorderBottomLeftRadius": 2,
  "MsBorderBottomRightRadius": 2,
  "MsBorderBottomStyle": 4,
  "MsBorderBottomWidth": 4,
  "MsBorderColor": 2,
  "MsBorderImageOutset": 2,
  "MsBorderImageRepeat": 2,
  "MsBorderImageSlice": 2,
  "MsBorderImageSource": 2,
  "MsBorderImageWidth": 2,
  "MsBorderLeft": 3,
  "MsBorderLeftColor": 4,
  "MsBorderLeftStyle": 4,
  "MsBorderLeftWidth": 4,
  "MsBorderRight": 3,
  "MsBorderRightColor": 4,
  "MsBorderRightStyle": 4,
  "MsBorderRightWidth": 4,
  "MsBorderStyle": 2,
  "MsBorderTop": 3,
  "MsBorderTopColor": 4,
  "MsBorderTopLeftRadius": 2,
  "MsBorderTopRightRadius": 2,
  "MsBorderTopStyle": 4,
  "MsBorderTopWidth": 4,
  "MsBorderWidth": 2,
  "MsColumnCount": 2,
  "MsColumnWidth": 2,
  "MsFlexBasis": 2,
  "MsFlexShrink": 2,
  "MsFlexWrap": 2,
  "MsListStyleImage": 2,
  "MsListStylePosition": 2,
  "MsListStyleType": 2,
  "MsMarginBottom": 2,
  "MsMarginLeft": 2,
  "MsMarginRight": 2,
  "MsMarginTop": 2,
  "MsOutlineColor": 2,
  "MsOutlineStyle": 2,
  "MsOutlineWidth": 2,
  "MsOverflowX": 2,
  "MsOverflowY": 2,
  "MsPaddingBottom": 2,
  "MsPaddingLeft": 2,
  "MsPaddingRight": 2,
  "MsPaddingTop": 2,
  "MsTextDecorationColor": 2,
  "MsTextDecorationLine": 2,
  "MsTextDecorationStyle": 2,
  "MsTransitionDelay": 2,
  "MsTransitionDuration": 2,
  "MsTransitionProperty": 2,
  "MsTransitionTimingFunction": 2,
  "WebkitAnimationDelay": 2,
  "WebkitAnimationDirection": 2,
  "WebkitAnimationDuration": 2,
  "WebkitAnimationFillMode": 2,
  "WebkitAnimationIterationCount": 2,
  "WebkitAnimationName": 2,
  "WebkitAnimationPlayState": 2,
  "WebkitAnimationTimingFunction": 2,
  "WebkitBackgroundClip": 2,
  "WebkitBackgroundColor": 2,
  "WebkitBackgroundImage": 2,
  "WebkitBackgroundOrigin": 2,
  "WebkitBackgroundPosition": 2,
  "WebkitBackgroundRepeat": 2,
  "WebkitBackgroundSize": 2,
  "WebkitBorderBottom": 3,
  "WebkitBorderBottomColor": 4,
  "WebkitBorderBottomLeftRadius": 2,
  "WebkitBorderBottomRightRadius": 2,
  "WebkitBorderBottomStyle": 4,
  "WebkitBorderBottomWidth": 4,
  "WebkitBorderColor": 2,
  "WebkitBorderImageOutset": 2,
  "WebkitBorderImageRepeat": 2,
  "WebkitBorderImageSlice": 2,
  "WebkitBorderImageSource": 2,
  "WebkitBorderImageWidth": 2,
  "WebkitBorderLeft": 3,
  "WebkitBorderLeftColor": 4,
  "WebkitBorderLeftStyle": 4,
  "WebkitBorderLeftWidth": 4,
  "WebkitBorderRight": 3,
  "WebkitBorderRightColor": 4,
  "WebkitBorderRightStyle": 4,
  "WebkitBorderRightWidth": 4,
  "WebkitBorderStyle": 2,
  "WebkitBorderTop": 3,
  "WebkitBorderTopColor": 4,
  "WebkitBorderTopLeftRadius": 2,
  "WebkitBorderTopRightRadius": 2,
  "WebkitBorderTopStyle": 4,
  "WebkitBorderTopWidth": 4,
  "WebkitBorderWidth": 2,
  "WebkitColumnCount": 2,
  "WebkitColumnWidth": 2,
  "WebkitFlexBasis": 2,
  "WebkitFlexShrink": 2,
  "WebkitFlexWrap": 2,
  "WebkitListStyleImage": 2,
  "WebkitListStylePosition": 2,
  "WebkitListStyleType": 2,
  "WebkitMarginBottom": 2,
  "WebkitMarginLeft": 2,
  "WebkitMarginRight": 2,
  "WebkitMarginTop": 2,
  "WebkitOutlineColor": 2,
  "WebkitOutlineStyle": 2,
  "WebkitOutlineWidth": 2,
  "WebkitOverflowX": 2,
  "WebkitOverflowY": 2,
  "WebkitPaddingBottom": 2,
  "WebkitPaddingLeft": 2,
  "WebkitPaddingRight": 2,
  "WebkitPaddingTop": 2,
  "WebkitTextDecorationColor": 2,
  "WebkitTextDecorationLine": 2,
  "WebkitTextDecorationStyle": 2,
  "WebkitTransitionDelay": 2,
  "WebkitTransitionDuration": 2,
  "WebkitTransitionProperty": 2,
  "WebkitTransitionTimingFunction": 2,
  "animationDelay": 2,
  "animationDirection": 2,
  "animationDuration": 2,
  "animationFillMode": 2,
  "animationIterationCount": 2,
  "animationName": 2,
  "animationPlayState": 2,
  "animationTimingFunction": 2,
  "backgroundClip": 2,
  "backgroundColor": 2,
  "backgroundImage": 2,
  "backgroundOrigin": 2,
  "backgroundPosition": 2,
  "backgroundRepeat": 2,
  "backgroundSize": 2,
  "borderBottom": 3,
  "borderBottomColor": 4,
  "borderBottomLeftRadius": 2,
  "borderBottomRightRadius": 2,
  "borderBottomStyle": 4,
  "borderBottomWidth": 4,
  "borderColor": 2,
  "borderImageOutset": 2,
  "borderImageRepeat": 2,
  "borderImageSlice": 2,
  "borderImageSource": 2,
  "borderImageWidth": 2,
  "borderLeft": 3,
  "borderLeftColor": 4,
  "borderLeftStyle": 4,
  "borderLeftWidth": 4,
  "borderRight": 3,
  "borderRightColor": 4,
  "borderRightStyle": 4,
  "borderRightWidth": 4,
  "borderStyle": 2,
  "borderTop": 3,
  "borderTopColor": 4,
  "borderTopLeftRadius": 2,
  "borderTopRightRadius": 2,
  "borderTopStyle": 4,
  "borderTopWidth": 4,
  "borderWidth": 2,
  "columnCount": 2,
  "columnWidth": 2,
  "flexBasis": 2,
  "flexShrink": 2,
  "flexWrap": 2,
  "listStyleImage": 2,
  "listStylePosition": 2,
  "listStyleType": 2,
  "marginBottom": 2,
  "marginLeft": 2,
  "marginRight": 2,
  "marginTop": 2,
  "outlineColor": 2,
  "outlineStyle": 2,
  "outlineWidth": 2,
  "overflowX": 2,
  "overflowY": 2,
  "paddingBottom": 2,
  "paddingLeft": 2,
  "paddingRight": 2,
  "paddingTop": 2,
  "textDecorationColor": 2,
  "textDecorationLine": 2,
  "textDecorationStyle": 2,
  "transitionDelay": 2,
  "transitionDuration": 2,
  "transitionProperty": 2,
  "transitionTimingFunction": 2,
}
`;

exports[`enforceLonghands enhancer should accept a borderMode=longhand configuration 1`] = `
{
  "MozAnimationDelay": 2,
  "MozAnimationDirection": 2,
  "MozAnimationDuration": 2,
  "MozAnimationFillMode": 2,
  "MozAnimationIterationCount": 2,
  "MozAnimationName": 2,
  "MozAnimationPlayState": 2,
  "MozAnimationTimingFunction": 2,
  "MozBackgroundClip": 2,
  "MozBackgroundColor": 2,
  "MozBackgroundImage": 2,
  "MozBackgroundOrigin": 2,
  "MozBackgroundPosition": 2,
  "MozBackgroundRepeat": 2,
  "MozBackgroundSize": 2,
  "MozBorderBottom": 2,
  "MozBorderBottomColor": 4,
  "MozBorderBottomLeftRadius": 2,
  "MozBorderBottomRightRadius": 2,
  "MozBorderBottomStyle": 4,
  "MozBorderBottomWidth": 4,
  "MozBorderColor": 3,
  "MozBorderImageOutset": 2,
  "MozBorderImageRepeat": 2,
  "MozBorderImageSlice": 2,
  "MozBorderImageSource": 2,
  "MozBorderImageWidth": 2,
  "MozBorderLeft": 2,
  "MozBorderLeftColor": 4,
  "MozBorderLeftStyle": 4,
  "MozBorderLeftWidth": 4,
  "MozBorderRight": 2,
  "MozBorderRightColor": 4,
  "MozBorderRightStyle": 4,
  "MozBorderRightWidth": 4,
  "MozBorderStyle": 3,
  "MozBorderTop": 2,
  "MozBorderTopColor": 4,
  "MozBorderTopLeftRadius": 2,
  "MozBorderTopRightRadius": 2,
  "MozBorderTopStyle": 4,
  "MozBorderTopWidth": 4,
  "MozBorderWidth": 3,
  "MozColumnCount": 2,
  "MozColumnWidth": 2,
  "MozFlexBasis": 2,
  "MozFlexShrink": 2,
  "MozFlexWrap": 2,
  "MozListStyleImage": 2,
  "MozListStylePosition": 2,
  "MozListStyleType": 2,
  "MozMarginBottom": 2,
  "MozMarginLeft": 2,
  "MozMarginRight": 2,
  "MozMarginTop": 2,
  "MozOutlineColor": 2,
  "MozOutlineStyle": 2,
  "MozOutlineWidth": 2,
  "MozOverflowX": 2,
  "MozOverflowY": 2,
  "MozPaddingBottom": 2,
  "MozPaddingLeft": 2,
  "MozPaddingRight": 2,
  "MozPaddingTop": 2,
  "MozTextDecorationColor": 2,
  "MozTextDecorationLine": 2,
  "MozTextDecorationStyle": 2,
  "MozTransitionDelay": 2,
  "MozTransitionDuration": 2,
  "MozTransitionProperty": 2,
  "MozTransitionTimingFunction": 2,
  "MsAnimationDelay": 2,
  "MsAnimationDirection": 2,
  "MsAnimationDuration": 2,
  "MsAnimationFillMode": 2,
  "MsAnimationIterationCount": 2,
  "MsAnimationName": 2,
  "MsAnimationPlayState": 2,
  "MsAnimationTimingFunction": 2,
  "MsBackgroundClip": 2,
  "MsBackgroundColor": 2,
  "MsBackgroundImage": 2,
  "MsBackgroundOrigin": 2,
  "MsBackgroundPosition": 2,
  "MsBackgroundRepeat": 2,
  "MsBackgroundSize": 2,
  "MsBorderBottom": 2,
  "MsBorderBottomColor": 4,
  "MsBorderBottomLeftRadius": 2,
  "MsBorderBottomRightRadius": 2,
  "MsBorderBottomStyle": 4,
  "MsBorderBottomWidth": 4,
  "MsBorderColor": 3,
  "MsBorderImageOutset": 2,
  "MsBorderImageRepeat": 2,
  "MsBorderImageSlice": 2,
  "MsBorderImageSource": 2,
  "MsBorderImageWidth": 2,
  "MsBorderLeft": 2,
  "MsBorderLeftColor": 4,
  "MsBorderLeftStyle": 4,
  "MsBorderLeftWidth": 4,
  "MsBorderRight": 2,
  "MsBorderRightColor": 4,
  "MsBorderRightStyle": 4,
  "MsBorderRightWidth": 4,
  "MsBorderStyle": 3,
  "MsBorderTop": 2,
  "MsBorderTopColor": 4,
  "MsBorderTopLeftRadius": 2,
  "MsBorderTopRightRadius": 2,
  "MsBorderTopStyle": 4,
  "MsBorderTopWidth": 4,
  "MsBorderWidth": 3,
  "MsColumnCount": 2,
  "MsColumnWidth": 2,
  "MsFlexBasis": 2,
  "MsFlexShrink": 2,
  "MsFlexWrap": 2,
  "MsListStyleImage": 2,
  "MsListStylePosition": 2,
  "MsListStyleType": 2,
  "MsMarginBottom": 2,
  "MsMarginLeft": 2,
  "MsMarginRight": 2,
  "MsMarginTop": 2,
  "MsOutlineColor": 2,
  "MsOutlineStyle": 2,
  "MsOutlineWidth": 2,
  "MsOverflowX": 2,
  "MsOverflowY": 2,
  "MsPaddingBottom": 2,
  "MsPaddingLeft": 2,
  "MsPaddingRight": 2,
  "MsPaddingTop": 2,
  "MsTextDecorationColor": 2,
  "MsTextDecorationLine": 2,
  "MsTextDecorationStyle": 2,
  "MsTransitionDelay": 2,
  "MsTransitionDuration": 2,
  "MsTransitionProperty": 2,
  "MsTransitionTimingFunction": 2,
  "WebkitAnimationDelay": 2,
  "WebkitAnimationDirection": 2,
  "WebkitAnimationDuration": 2,
  "WebkitAnimationFillMode": 2,
  "WebkitAnimationIterationCount": 2,
  "WebkitAnimationName": 2,
  "WebkitAnimationPlayState": 2,
  "WebkitAnimationTimingFunction": 2,
  "WebkitBackgroundClip": 2,
  "WebkitBackgroundColor": 2,
  "WebkitBackgroundImage": 2,
  "WebkitBackgroundOrigin": 2,
  "WebkitBackgroundPosition": 2,
  "WebkitBackgroundRepeat": 2,
  "WebkitBackgroundSize": 2,
  "WebkitBorderBottom": 2,
  "WebkitBorderBottomColor": 4,
  "WebkitBorderBottomLeftRadius": 2,
  "WebkitBorderBottomRightRadius": 2,
  "WebkitBorderBottomStyle": 4,
  "WebkitBorderBottomWidth": 4,
  "WebkitBorderColor": 3,
  "WebkitBorderImageOutset": 2,
  "WebkitBorderImageRepeat": 2,
  "WebkitBorderImageSlice": 2,
  "WebkitBorderImageSource": 2,
  "WebkitBorderImageWidth": 2,
  "WebkitBorderLeft": 2,
  "WebkitBorderLeftColor": 4,
  "WebkitBorderLeftStyle": 4,
  "WebkitBorderLeftWidth": 4,
  "WebkitBorderRight": 2,
  "WebkitBorderRightColor": 4,
  "WebkitBorderRightStyle": 4,
  "WebkitBorderRightWidth": 4,
  "WebkitBorderStyle": 3,
  "WebkitBorderTop": 2,
  "WebkitBorderTopColor": 4,
  "WebkitBorderTopLeftRadius": 2,
  "WebkitBorderTopRightRadius": 2,
  "WebkitBorderTopStyle": 4,
  "WebkitBorderTopWidth": 4,
  "WebkitBorderWidth": 3,
  "WebkitColumnCount": 2,
  "WebkitColumnWidth": 2,
  "WebkitFlexBasis": 2,
  "WebkitFlexShrink": 2,
  "WebkitFlexWrap": 2,
  "WebkitListStyleImage": 2,
  "WebkitListStylePosition": 2,
  "WebkitListStyleType": 2,
  "WebkitMarginBottom": 2,
  "WebkitMarginLeft": 2,
  "WebkitMarginRight": 2,
  "WebkitMarginTop": 2,
  "WebkitOutlineColor": 2,
  "WebkitOutlineStyle": 2,
  "WebkitOutlineWidth": 2,
  "WebkitOverflowX": 2,
  "WebkitOverflowY": 2,
  "WebkitPaddingBottom": 2,
  "WebkitPaddingLeft": 2,
  "WebkitPaddingRight": 2,
  "WebkitPaddingTop": 2,
  "WebkitTextDecorationColor": 2,
  "WebkitTextDecorationLine": 2,
  "WebkitTextDecorationStyle": 2,
  "WebkitTransitionDelay": 2,
  "WebkitTransitionDuration": 2,
  "WebkitTransitionProperty": 2,
  "WebkitTransitionTimingFunction": 2,
  "animationDelay": 2,
  "animationDirection": 2,
  "animationDuration": 2,
  "animationFillMode": 2,
  "animationIterationCount": 2,
  "animationName": 2,
  "animationPlayState": 2,
  "animationTimingFunction": 2,
  "backgroundClip": 2,
  "backgroundColor": 2,
  "backgroundImage": 2,
  "backgroundOrigin": 2,
  "backgroundPosition": 2,
  "backgroundRepeat": 2,
  "backgroundSize": 2,
  "borderBottom": 2,
  "borderBottomColor": 4,
  "borderBottomLeftRadius": 2,
  "borderBottomRightRadius": 2,
  "borderBottomStyle": 4,
  "borderBottomWidth": 4,
  "borderColor": 3,
  "borderImageOutset": 2,
  "borderImageRepeat": 2,
  "borderImageSlice": 2,
  "borderImageSource": 2,
  "borderImageWidth": 2,
  "borderLeft": 2,
  "borderLeftColor": 4,
  "borderLeftStyle": 4,
  "borderLeftWidth": 4,
  "borderRight": 2,
  "borderRightColor": 4,
  "borderRightStyle": 4,
  "borderRightWidth": 4,
  "borderStyle": 3,
  "borderTop": 2,
  "borderTopColor": 4,
  "borderTopLeftRadius": 2,
  "borderTopRightRadius": 2,
  "borderTopStyle": 4,
  "borderTopWidth": 4,
  "borderWidth": 3,
  "columnCount": 2,
  "columnWidth": 2,
  "flexBasis": 2,
  "flexShrink": 2,
  "flexWrap": 2,
  "listStyleImage": 2,
  "listStylePosition": 2,
  "listStyleType": 2,
  "marginBottom": 2,
  "marginLeft": 2,
  "marginRight": 2,
  "marginTop": 2,
  "outlineColor": 2,
  "outlineStyle": 2,
  "outlineWidth": 2,
  "overflowX": 2,
  "overflowY": 2,
  "paddingBottom": 2,
  "paddingLeft": 2,
  "paddingRight": 2,
  "paddingTop": 2,
  "textDecorationColor": 2,
  "textDecorationLine": 2,
  "textDecorationStyle": 2,
  "transitionDelay": 2,
  "transitionDuration": 2,
  "transitionProperty": 2,
  "transitionTimingFunction": 2,
}
`;

exports[`enforceLonghands enhancer should correctly apply property priority 1`] = `
{
  "MozAnimationDelay": 2,
  "MozAnimationDirection": 2,
  "MozAnimationDuration": 2,
  "MozAnimationFillMode": 2,
  "MozAnimationIterationCount": 2,
  "MozAnimationName": 2,
  "MozAnimationPlayState": 2,
  "MozAnimationTimingFunction": 2,
  "MozBackgroundClip": 2,
  "MozBackgroundColor": 2,
  "MozBackgroundImage": 2,
  "MozBackgroundOrigin": 2,
  "MozBackgroundPosition": 2,
  "MozBackgroundRepeat": 2,
  "MozBackgroundSize": 2,
  "MozBorderBottom": 2,
  "MozBorderBottomColor": 3,
  "MozBorderBottomLeftRadius": 2,
  "MozBorderBottomRightRadius": 2,
  "MozBorderBottomStyle": 3,
  "MozBorderBottomWidth": 3,
  "MozBorderColor": 2,
  "MozBorderImageOutset": 2,
  "MozBorderImageRepeat": 2,
  "MozBorderImageSlice": 2,
  "MozBorderImageSource": 2,
  "MozBorderImageWidth": 2,
  "MozBorderLeft": 2,
  "MozBorderLeftColor": 3,
  "MozBorderLeftStyle": 3,
  "MozBorderLeftWidth": 3,
  "MozBorderRight": 2,
  "MozBorderRightColor": 3,
  "MozBorderRightStyle": 3,
  "MozBorderRightWidth": 3,
  "MozBorderStyle": 2,
  "MozBorderTop": 2,
  "MozBorderTopColor": 3,
  "MozBorderTopLeftRadius": 2,
  "MozBorderTopRightRadius": 2,
  "MozBorderTopStyle": 3,
  "MozBorderTopWidth": 3,
  "MozBorderWidth": 2,
  "MozColumnCount": 2,
  "MozColumnWidth": 2,
  "MozFlexBasis": 2,
  "MozFlexShrink": 2,
  "MozFlexWrap": 2,
  "MozListStyleImage": 2,
  "MozListStylePosition": 2,
  "MozListStyleType": 2,
  "MozMarginBottom": 2,
  "MozMarginLeft": 2,
  "MozMarginRight": 2,
  "MozMarginTop": 2,
  "MozOutlineColor": 2,
  "MozOutlineStyle": 2,
  "MozOutlineWidth": 2,
  "MozOverflowX": 2,
  "MozOverflowY": 2,
  "MozPaddingBottom": 2,
  "MozPaddingLeft": 2,
  "MozPaddingRight": 2,
  "MozPaddingTop": 2,
  "MozTextDecorationColor": 2,
  "MozTextDecorationLine": 2,
  "MozTextDecorationStyle": 2,
  "MozTransitionDelay": 2,
  "MozTransitionDuration": 2,
  "MozTransitionProperty": 2,
  "MozTransitionTimingFunction": 2,
  "MsAnimationDelay": 2,
  "MsAnimationDirection": 2,
  "MsAnimationDuration": 2,
  "MsAnimationFillMode": 2,
  "MsAnimationIterationCount": 2,
  "MsAnimationName": 2,
  "MsAnimationPlayState": 2,
  "MsAnimationTimingFunction": 2,
  "MsBackgroundClip": 2,
  "MsBackgroundColor": 2,
  "MsBackgroundImage": 2,
  "MsBackgroundOrigin": 2,
  "MsBackgroundPosition": 2,
  "MsBackgroundRepeat": 2,
  "MsBackgroundSize": 2,
  "MsBorderBottom": 2,
  "MsBorderBottomColor": 3,
  "MsBorderBottomLeftRadius": 2,
  "MsBorderBottomRightRadius": 2,
  "MsBorderBottomStyle": 3,
  "MsBorderBottomWidth": 3,
  "MsBorderColor": 2,
  "MsBorderImageOutset": 2,
  "MsBorderImageRepeat": 2,
  "MsBorderImageSlice": 2,
  "MsBorderImageSource": 2,
  "MsBorderImageWidth": 2,
  "MsBorderLeft": 2,
  "MsBorderLeftColor": 3,
  "MsBorderLeftStyle": 3,
  "MsBorderLeftWidth": 3,
  "MsBorderRight": 2,
  "MsBorderRightColor": 3,
  "MsBorderRightStyle": 3,
  "MsBorderRightWidth": 3,
  "MsBorderStyle": 2,
  "MsBorderTop": 2,
  "MsBorderTopColor": 3,
  "MsBorderTopLeftRadius": 2,
  "MsBorderTopRightRadius": 2,
  "MsBorderTopStyle": 3,
  "MsBorderTopWidth": 3,
  "MsBorderWidth": 2,
  "MsColumnCount": 2,
  "MsColumnWidth": 2,
  "MsFlexBasis": 2,
  "MsFlexShrink": 2,
  "MsFlexWrap": 2,
  "MsListStyleImage": 2,
  "MsListStylePosition": 2,
  "MsListStyleType": 2,
  "MsMarginBottom": 2,
  "MsMarginLeft": 2,
  "MsMarginRight": 2,
  "MsMarginTop": 2,
  "MsOutlineColor": 2,
  "MsOutlineStyle": 2,
  "MsOutlineWidth": 2,
  "MsOverflowX": 2,
  "MsOverflowY": 2,
  "MsPaddingBottom": 2,
  "MsPaddingLeft": 2,
  "MsPaddingRight": 2,
  "MsPaddingTop": 2,
  "MsTextDecorationColor": 2,
  "MsTextDecorationLine": 2,
  "MsTextDecorationStyle": 2,
  "MsTransitionDelay": 2,
  "MsTransitionDuration": 2,
  "MsTransitionProperty": 2,
  "MsTransitionTimingFunction": 2,
  "WebkitAnimationDelay": 2,
  "WebkitAnimationDirection": 2,
  "WebkitAnimationDuration": 2,
  "WebkitAnimationFillMode": 2,
  "WebkitAnimationIterationCount": 2,
  "WebkitAnimationName": 2,
  "WebkitAnimationPlayState": 2,
  "WebkitAnimationTimingFunction": 2,
  "WebkitBackgroundClip": 2,
  "WebkitBackgroundColor": 2,
  "WebkitBackgroundImage": 2,
  "WebkitBackgroundOrigin": 2,
  "WebkitBackgroundPosition": 2,
  "WebkitBackgroundRepeat": 2,
  "WebkitBackgroundSize": 2,
  "WebkitBorderBottom": 2,
  "WebkitBorderBottomColor": 3,
  "WebkitBorderBottomLeftRadius": 2,
  "WebkitBorderBottomRightRadius": 2,
  "WebkitBorderBottomStyle": 3,
  "WebkitBorderBottomWidth": 3,
  "WebkitBorderColor": 2,
  "WebkitBorderImageOutset": 2,
  "WebkitBorderImageRepeat": 2,
  "WebkitBorderImageSlice": 2,
  "WebkitBorderImageSource": 2,
  "WebkitBorderImageWidth": 2,
  "WebkitBorderLeft": 2,
  "WebkitBorderLeftColor": 3,
  "WebkitBorderLeftStyle": 3,
  "WebkitBorderLeftWidth": 3,
  "WebkitBorderRight": 2,
  "WebkitBorderRightColor": 3,
  "WebkitBorderRightStyle": 3,
  "WebkitBorderRightWidth": 3,
  "WebkitBorderStyle": 2,
  "WebkitBorderTop": 2,
  "WebkitBorderTopColor": 3,
  "WebkitBorderTopLeftRadius": 2,
  "WebkitBorderTopRightRadius": 2,
  "WebkitBorderTopStyle": 3,
  "WebkitBorderTopWidth": 3,
  "WebkitBorderWidth": 2,
  "WebkitColumnCount": 2,
  "WebkitColumnWidth": 2,
  "WebkitFlexBasis": 2,
  "WebkitFlexShrink": 2,
  "WebkitFlexWrap": 2,
  "WebkitListStyleImage": 2,
  "WebkitListStylePosition": 2,
  "WebkitListStyleType": 2,
  "WebkitMarginBottom": 2,
  "WebkitMarginLeft": 2,
  "WebkitMarginRight": 2,
  "WebkitMarginTop": 2,
  "WebkitOutlineColor": 2,
  "WebkitOutlineStyle": 2,
  "WebkitOutlineWidth": 2,
  "WebkitOverflowX": 2,
  "WebkitOverflowY": 2,
  "WebkitPaddingBottom": 2,
  "WebkitPaddingLeft": 2,
  "WebkitPaddingRight": 2,
  "WebkitPaddingTop": 2,
  "WebkitTextDecorationColor": 2,
  "WebkitTextDecorationLine": 2,
  "WebkitTextDecorationStyle": 2,
  "WebkitTransitionDelay": 2,
  "WebkitTransitionDuration": 2,
  "WebkitTransitionProperty": 2,
  "WebkitTransitionTimingFunction": 2,
  "animationDelay": 2,
  "animationDirection": 2,
  "animationDuration": 2,
  "animationFillMode": 2,
  "animationIterationCount": 2,
  "animationName": 2,
  "animationPlayState": 2,
  "animationTimingFunction": 2,
  "backgroundClip": 2,
  "backgroundColor": 2,
  "backgroundImage": 2,
  "backgroundOrigin": 2,
  "backgroundPosition": 2,
  "backgroundRepeat": 2,
  "backgroundSize": 2,
  "borderBottom": 2,
  "borderBottomColor": 3,
  "borderBottomLeftRadius": 2,
  "borderBottomRightRadius": 2,
  "borderBottomStyle": 3,
  "borderBottomWidth": 3,
  "borderColor": 2,
  "borderImageOutset": 2,
  "borderImageRepeat": 2,
  "borderImageSlice": 2,
  "borderImageSource": 2,
  "borderImageWidth": 2,
  "borderLeft": 2,
  "borderLeftColor": 3,
  "borderLeftStyle": 3,
  "borderLeftWidth": 3,
  "borderRight": 2,
  "borderRightColor": 3,
  "borderRightStyle": 3,
  "borderRightWidth": 3,
  "borderStyle": 2,
  "borderTop": 2,
  "borderTopColor": 3,
  "borderTopLeftRadius": 2,
  "borderTopRightRadius": 2,
  "borderTopStyle": 3,
  "borderTopWidth": 3,
  "borderWidth": 2,
  "columnCount": 2,
  "columnWidth": 2,
  "flexBasis": 2,
  "flexShrink": 2,
  "flexWrap": 2,
  "listStyleImage": 2,
  "listStylePosition": 2,
  "listStyleType": 2,
  "marginBottom": 2,
  "marginLeft": 2,
  "marginRight": 2,
  "marginTop": 2,
  "outlineColor": 2,
  "outlineStyle": 2,
  "outlineWidth": 2,
  "overflowX": 2,
  "overflowY": 2,
  "paddingBottom": 2,
  "paddingLeft": 2,
  "paddingRight": 2,
  "paddingTop": 2,
  "textDecorationColor": 2,
  "textDecorationLine": 2,
  "textDecorationStyle": 2,
  "transitionDelay": 2,
  "transitionDuration": 2,
  "transitionProperty": 2,
  "transitionTimingFunction": 2,
}
`;
